// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form details tests render form details - config 1`] = `
<FormDetails
  driver={MockedFormDetailsDriver {}}
  formData={
    Object {
      "lastModified": 2020-07-11T18:30:00.000Z,
      "name": "form1",
      "type": "html",
    }
  }
  isEnvelopeConnectedToChannel={true}
>
  <div
    data-ouia-component-type="form-details"
    data-ouia-safe={true}
  >
    <Drawer
      isStatic={true}
    >
      <div
        className="pf-c-drawer pf-m-static"
      >
        <DrawerContent
          panelContent={
            <DrawerPanelContent
              defaultSize="800px"
              isResizable={true}
              onResize={[Function]}
            >
              <DrawerHead
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span>
                  <MockedFormDisplayerContainer
                    formContent={
                      Object {
                        "configuration": Object {
                          "resources": Object {
                            "scripts": Object {},
                            "styles": Object {},
                          },
                          "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                        },
                        "formInfo": Object {
                          "lastModified": 2020-07-11T18:30:00.000Z,
                          "name": "form1",
                          "type": "HTML",
                        },
                        "source": "html source code",
                      }
                    }
                  />
                </span>
              </DrawerHead>
            </DrawerPanelContent>
          }
        >
          <DrawerMain>
            <div
              className="pf-c-drawer__main"
            >
              <div
                className="pf-c-drawer__content"
              >
                <Tabs
                  activeKey={1}
                  component="div"
                  isBox={false}
                  isFilled={true}
                  isSecondary={false}
                  isVertical={false}
                  leftScrollAriaLabel="Scroll left"
                  mountOnEnter={false}
                  onSelect={[Function]}
                  ouiaSafe={true}
                  rightScrollAriaLabel="Scroll right"
                  unmountOnExit={false}
                  variant="default"
                >
                  <div
                    className="pf-c-tabs pf-m-fill"
                    data-ouia-component-id="OUIA-Generated-Tabs-2"
                    data-ouia-component-type="PF4/Tabs"
                    data-ouia-safe={true}
                    onSelect={[Function]}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Scroll left"
                      className="pf-c-tabs__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <AngleLeftIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                          />
                        </svg>
                      </AngleLeftIcon>
                    </button>
                    <ul
                      className="pf-c-tabs__list"
                      onScroll={[Function]}
                    >
                      <Tab
                        aria-labelledby="source-tab"
                        eventKey={0}
                        id="source-tab"
                        key=".0"
                        title={
                          <TabTitleText>
                            Source
                          </TabTitleText>
                        }
                      >
                        <TabBase
                          aria-labelledby="source-tab"
                          eventKey={0}
                          id="source-tab"
                          innerRef={null}
                          title={
                            <TabTitleText>
                              Source
                            </TabTitleText>
                          }
                        >
                          <li
                            className="pf-c-tabs__item"
                          >
                            <TabButton
                              aria-controls="pf-tab-section-0-source-tab"
                              aria-labelledby="source-tab"
                              className="pf-c-tabs__link"
                              id="pf-tab-0-source-tab"
                              onClick={[Function]}
                            >
                              <button
                                aria-controls="pf-tab-section-0-source-tab"
                                aria-labelledby="source-tab"
                                className="pf-c-tabs__link"
                                data-ouia-component-type="PF4/TabButton"
                                data-ouia-safe={true}
                                id="pf-tab-0-source-tab"
                                onClick={[Function]}
                              >
                                <TabTitleText>
                                  <span
                                    className="pf-c-tabs__item-text"
                                  >
                                    Source
                                  </span>
                                </TabTitleText>
                              </button>
                            </TabButton>
                          </li>
                        </TabBase>
                      </Tab>
                      <Tab
                        aria-labelledby="config-tab"
                        eventKey={1}
                        id="config-tab"
                        key=".1"
                        title={
                          <TabTitleText>
                            Connections
                          </TabTitleText>
                        }
                      >
                        <TabBase
                          aria-labelledby="config-tab"
                          eventKey={1}
                          id="config-tab"
                          innerRef={null}
                          title={
                            <TabTitleText>
                              Connections
                            </TabTitleText>
                          }
                        >
                          <li
                            className="pf-c-tabs__item pf-m-current"
                          >
                            <TabButton
                              aria-controls="pf-tab-section-1-config-tab"
                              aria-labelledby="config-tab"
                              className="pf-c-tabs__link"
                              id="pf-tab-1-config-tab"
                              onClick={[Function]}
                            >
                              <button
                                aria-controls="pf-tab-section-1-config-tab"
                                aria-labelledby="config-tab"
                                className="pf-c-tabs__link"
                                data-ouia-component-type="PF4/TabButton"
                                data-ouia-safe={true}
                                id="pf-tab-1-config-tab"
                                onClick={[Function]}
                              >
                                <TabTitleText>
                                  <span
                                    className="pf-c-tabs__item-text"
                                  >
                                    Connections
                                  </span>
                                </TabTitleText>
                              </button>
                            </TabButton>
                          </li>
                        </TabBase>
                      </Tab>
                    </ul>
                    <button
                      aria-hidden={true}
                      aria-label="Scroll right"
                      className="pf-c-tabs__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </button>
                  </div>
                  <ForwardRef
                    activeKey={1}
                    child={
                      <Tab
                        aria-labelledby="source-tab"
                        eventKey={0}
                        id="source-tab"
                        title={
                          <TabTitleText>
                            Source
                          </TabTitleText>
                        }
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        />
                      </Tab>
                    }
                    id="source-tab"
                    key="0"
                  >
                    <TabContentBase
                      activeKey={1}
                      child={
                        <Tab
                          aria-labelledby="source-tab"
                          eventKey={0}
                          id="source-tab"
                          title={
                            <TabTitleText>
                              Source
                            </TabTitleText>
                          }
                        >
                          <DrawerContentBody
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          />
                        </Tab>
                      }
                      id="source-tab"
                      innerRef={null}
                    >
                      <section
                        aria-labelledby="pf-tab-0-source-tab"
                        className="pf-c-tab-content"
                        data-ouia-component-type="PF4/TabContent"
                        data-ouia-safe={true}
                        hidden={true}
                        id="pf-tab-section-0-source-tab"
                        role="tabpanel"
                        tabIndex={0}
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <div
                            className="pf-c-drawer__body"
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          />
                        </DrawerContentBody>
                      </section>
                    </TabContentBase>
                  </ForwardRef>
                  <ForwardRef
                    activeKey={1}
                    child={
                      <Tab
                        aria-labelledby="config-tab"
                        eventKey={1}
                        id="config-tab"
                        title={
                          <TabTitleText>
                            Connections
                          </TabTitleText>
                        }
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <ForwardRef
                            code="{
  \\"scripts\\": {},
  \\"styles\\": {}
}"
                            formContent={
                              Object {
                                "configuration": Object {
                                  "resources": Object {
                                    "scripts": Object {},
                                    "styles": Object {},
                                  },
                                  "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                },
                                "formInfo": Object {
                                  "lastModified": 2020-07-11T18:30:00.000Z,
                                  "name": "form1",
                                  "type": "HTML",
                                },
                                "source": "html source code",
                              }
                            }
                            isConfig={true}
                            saveFormContent={[Function]}
                            setFormContent={[Function]}
                          />
                        </DrawerContentBody>
                      </Tab>
                    }
                    id="config-tab"
                    key="1"
                  >
                    <TabContentBase
                      activeKey={1}
                      child={
                        <Tab
                          aria-labelledby="config-tab"
                          eventKey={1}
                          id="config-tab"
                          title={
                            <TabTitleText>
                              Connections
                            </TabTitleText>
                          }
                        >
                          <DrawerContentBody
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          >
                            <ForwardRef
                              code="{
  \\"scripts\\": {},
  \\"styles\\": {}
}"
                              formContent={
                                Object {
                                  "configuration": Object {
                                    "resources": Object {
                                      "scripts": Object {},
                                      "styles": Object {},
                                    },
                                    "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                  },
                                  "formInfo": Object {
                                    "lastModified": 2020-07-11T18:30:00.000Z,
                                    "name": "form1",
                                    "type": "HTML",
                                  },
                                  "source": "html source code",
                                }
                              }
                              isConfig={true}
                              saveFormContent={[Function]}
                              setFormContent={[Function]}
                            />
                          </DrawerContentBody>
                        </Tab>
                      }
                      id="config-tab"
                      innerRef={null}
                    >
                      <section
                        aria-labelledby="pf-tab-1-config-tab"
                        className="pf-c-tab-content"
                        data-ouia-component-type="PF4/TabContent"
                        data-ouia-safe={true}
                        hidden={false}
                        id="pf-tab-section-1-config-tab"
                        role="tabpanel"
                        tabIndex={0}
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <div
                            className="pf-c-drawer__body"
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          >
                            <ForwardRef
                              code="{
  \\"scripts\\": {},
  \\"styles\\": {}
}"
                              formContent={
                                Object {
                                  "configuration": Object {
                                    "resources": Object {
                                      "scripts": Object {},
                                      "styles": Object {},
                                    },
                                    "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                  },
                                  "formInfo": Object {
                                    "lastModified": 2020-07-11T18:30:00.000Z,
                                    "name": "form1",
                                    "type": "HTML",
                                  },
                                  "source": "html source code",
                                }
                              }
                              isConfig={true}
                              saveFormContent={[Function]}
                              setFormContent={[Function]}
                            />
                          </div>
                        </DrawerContentBody>
                      </section>
                    </TabContentBase>
                  </ForwardRef>
                </Tabs>
              </div>
              <DrawerPanelContent
                defaultSize="800px"
                isResizable={true}
                onResize={[Function]}
              >
                <div
                  className="pf-c-drawer__panel pf-m-resizable"
                  hidden={false}
                  onTransitionEnd={[Function]}
                  style={
                    Object {
                      "--pf-c-drawer__panel--md--FlexBasis": "800px",
                    }
                  }
                >
                  <div
                    aria-describedby="Press space to begin resizing, and use the arrow keys to grow or shrink the panel. Press enter or escape to finish resizing."
                    aria-label="Resize"
                    aria-orientation="vertical"
                    className="pf-c-drawer__splitter pf-m-vertical"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                    role="separator"
                    tabIndex={0}
                  >
                    <div
                      aria-hidden={true}
                      className="pf-c-drawer__splitter-handle"
                    />
                  </div>
                  <div
                    className="pf-c-drawer__panel-main"
                  >
                    <DrawerHead
                      style={
                        Object {
                          "height": "100%",
                        }
                      }
                    >
                      <DrawerPanelBody
                        hasNoPadding={false}
                      >
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-c-drawer__head"
                            style={
                              Object {
                                "height": "100%",
                              }
                            }
                          >
                            <span>
                              <MockedFormDisplayerContainer
                                formContent={
                                  Object {
                                    "configuration": Object {
                                      "resources": Object {
                                        "scripts": Object {},
                                        "styles": Object {},
                                      },
                                      "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                    },
                                    "formInfo": Object {
                                      "lastModified": 2020-07-11T18:30:00.000Z,
                                      "name": "form1",
                                      "type": "HTML",
                                    },
                                    "source": "html source code",
                                  }
                                }
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerPanelBody>
                    </DrawerHead>
                  </div>
                </div>
              </DrawerPanelContent>
            </div>
          </DrawerMain>
        </DrawerContent>
      </div>
    </Drawer>
  </div>
</FormDetails>
`;

exports[`form details tests render form details - source 1`] = `
<FormDetails
  driver={MockedFormDetailsDriver {}}
  formData={
    Object {
      "lastModified": 2020-07-11T18:30:00.000Z,
      "name": "form1",
      "type": "HTML",
    }
  }
  isEnvelopeConnectedToChannel={true}
>
  <div
    data-ouia-component-type="form-details"
    data-ouia-safe={true}
  >
    <Drawer
      isStatic={true}
    >
      <div
        className="pf-c-drawer pf-m-static"
      >
        <DrawerContent
          panelContent={
            <DrawerPanelContent
              defaultSize="800px"
              isResizable={true}
              onResize={[Function]}
            >
              <DrawerHead
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span>
                  <MockedFormDisplayerContainer
                    formContent={
                      Object {
                        "configuration": Object {
                          "resources": Object {
                            "scripts": Object {},
                            "styles": Object {},
                          },
                          "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                        },
                        "formInfo": Object {
                          "lastModified": 2020-07-11T18:30:00.000Z,
                          "name": "form1",
                          "type": "HTML",
                        },
                        "source": "html source code",
                      }
                    }
                  />
                </span>
              </DrawerHead>
            </DrawerPanelContent>
          }
        >
          <DrawerMain>
            <div
              className="pf-c-drawer__main"
            >
              <div
                className="pf-c-drawer__content"
              >
                <Tabs
                  activeKey={0}
                  component="div"
                  isBox={false}
                  isFilled={true}
                  isSecondary={false}
                  isVertical={false}
                  leftScrollAriaLabel="Scroll left"
                  mountOnEnter={false}
                  onSelect={[Function]}
                  ouiaSafe={true}
                  rightScrollAriaLabel="Scroll right"
                  unmountOnExit={false}
                  variant="default"
                >
                  <div
                    className="pf-c-tabs pf-m-fill"
                    data-ouia-component-id="OUIA-Generated-Tabs-1"
                    data-ouia-component-type="PF4/Tabs"
                    data-ouia-safe={true}
                    onSelect={[Function]}
                  >
                    <button
                      aria-hidden={true}
                      aria-label="Scroll left"
                      className="pf-c-tabs__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <AngleLeftIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                          />
                        </svg>
                      </AngleLeftIcon>
                    </button>
                    <ul
                      className="pf-c-tabs__list"
                      onScroll={[Function]}
                    >
                      <Tab
                        aria-labelledby="source-tab"
                        eventKey={0}
                        id="source-tab"
                        key=".0"
                        title={
                          <TabTitleText>
                            Source
                          </TabTitleText>
                        }
                      >
                        <TabBase
                          aria-labelledby="source-tab"
                          eventKey={0}
                          id="source-tab"
                          innerRef={null}
                          title={
                            <TabTitleText>
                              Source
                            </TabTitleText>
                          }
                        >
                          <li
                            className="pf-c-tabs__item pf-m-current"
                          >
                            <TabButton
                              aria-controls="pf-tab-section-0-source-tab"
                              aria-labelledby="source-tab"
                              className="pf-c-tabs__link"
                              id="pf-tab-0-source-tab"
                              onClick={[Function]}
                            >
                              <button
                                aria-controls="pf-tab-section-0-source-tab"
                                aria-labelledby="source-tab"
                                className="pf-c-tabs__link"
                                data-ouia-component-type="PF4/TabButton"
                                data-ouia-safe={true}
                                id="pf-tab-0-source-tab"
                                onClick={[Function]}
                              >
                                <TabTitleText>
                                  <span
                                    className="pf-c-tabs__item-text"
                                  >
                                    Source
                                  </span>
                                </TabTitleText>
                              </button>
                            </TabButton>
                          </li>
                        </TabBase>
                      </Tab>
                      <Tab
                        aria-labelledby="config-tab"
                        eventKey={1}
                        id="config-tab"
                        key=".1"
                        title={
                          <TabTitleText>
                            Connections
                          </TabTitleText>
                        }
                      >
                        <TabBase
                          aria-labelledby="config-tab"
                          eventKey={1}
                          id="config-tab"
                          innerRef={null}
                          title={
                            <TabTitleText>
                              Connections
                            </TabTitleText>
                          }
                        >
                          <li
                            className="pf-c-tabs__item"
                          >
                            <TabButton
                              aria-controls="pf-tab-section-1-config-tab"
                              aria-labelledby="config-tab"
                              className="pf-c-tabs__link"
                              id="pf-tab-1-config-tab"
                              onClick={[Function]}
                            >
                              <button
                                aria-controls="pf-tab-section-1-config-tab"
                                aria-labelledby="config-tab"
                                className="pf-c-tabs__link"
                                data-ouia-component-type="PF4/TabButton"
                                data-ouia-safe={true}
                                id="pf-tab-1-config-tab"
                                onClick={[Function]}
                              >
                                <TabTitleText>
                                  <span
                                    className="pf-c-tabs__item-text"
                                  >
                                    Connections
                                  </span>
                                </TabTitleText>
                              </button>
                            </TabButton>
                          </li>
                        </TabBase>
                      </Tab>
                    </ul>
                    <button
                      aria-hidden={true}
                      aria-label="Scroll right"
                      className="pf-c-tabs__scroll-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </button>
                  </div>
                  <ForwardRef
                    activeKey={0}
                    child={
                      <Tab
                        aria-labelledby="source-tab"
                        eventKey={0}
                        id="source-tab"
                        title={
                          <TabTitleText>
                            Source
                          </TabTitleText>
                        }
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <ForwardRef
                            code="html source code"
                            formContent={
                              Object {
                                "configuration": Object {
                                  "resources": Object {
                                    "scripts": Object {},
                                    "styles": Object {},
                                  },
                                  "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                },
                                "formInfo": Object {
                                  "lastModified": 2020-07-11T18:30:00.000Z,
                                  "name": "form1",
                                  "type": "HTML",
                                },
                                "source": "html source code",
                              }
                            }
                            formType="HTML"
                            isSource={true}
                            saveFormContent={[Function]}
                            setFormContent={[Function]}
                          />
                        </DrawerContentBody>
                      </Tab>
                    }
                    id="source-tab"
                    key="0"
                  >
                    <TabContentBase
                      activeKey={0}
                      child={
                        <Tab
                          aria-labelledby="source-tab"
                          eventKey={0}
                          id="source-tab"
                          title={
                            <TabTitleText>
                              Source
                            </TabTitleText>
                          }
                        >
                          <DrawerContentBody
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          >
                            <ForwardRef
                              code="html source code"
                              formContent={
                                Object {
                                  "configuration": Object {
                                    "resources": Object {
                                      "scripts": Object {},
                                      "styles": Object {},
                                    },
                                    "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                  },
                                  "formInfo": Object {
                                    "lastModified": 2020-07-11T18:30:00.000Z,
                                    "name": "form1",
                                    "type": "HTML",
                                  },
                                  "source": "html source code",
                                }
                              }
                              formType="HTML"
                              isSource={true}
                              saveFormContent={[Function]}
                              setFormContent={[Function]}
                            />
                          </DrawerContentBody>
                        </Tab>
                      }
                      id="source-tab"
                      innerRef={null}
                    >
                      <section
                        aria-labelledby="pf-tab-0-source-tab"
                        className="pf-c-tab-content"
                        data-ouia-component-type="PF4/TabContent"
                        data-ouia-safe={true}
                        hidden={false}
                        id="pf-tab-section-0-source-tab"
                        role="tabpanel"
                        tabIndex={0}
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <div
                            className="pf-c-drawer__body"
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          >
                            <ForwardRef
                              code="html source code"
                              formContent={
                                Object {
                                  "configuration": Object {
                                    "resources": Object {
                                      "scripts": Object {},
                                      "styles": Object {},
                                    },
                                    "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                  },
                                  "formInfo": Object {
                                    "lastModified": 2020-07-11T18:30:00.000Z,
                                    "name": "form1",
                                    "type": "HTML",
                                  },
                                  "source": "html source code",
                                }
                              }
                              formType="HTML"
                              isSource={true}
                              saveFormContent={[Function]}
                              setFormContent={[Function]}
                            />
                          </div>
                        </DrawerContentBody>
                      </section>
                    </TabContentBase>
                  </ForwardRef>
                  <ForwardRef
                    activeKey={0}
                    child={
                      <Tab
                        aria-labelledby="config-tab"
                        eventKey={1}
                        id="config-tab"
                        title={
                          <TabTitleText>
                            Connections
                          </TabTitleText>
                        }
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        />
                      </Tab>
                    }
                    id="config-tab"
                    key="1"
                  >
                    <TabContentBase
                      activeKey={0}
                      child={
                        <Tab
                          aria-labelledby="config-tab"
                          eventKey={1}
                          id="config-tab"
                          title={
                            <TabTitleText>
                              Connections
                            </TabTitleText>
                          }
                        >
                          <DrawerContentBody
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          />
                        </Tab>
                      }
                      id="config-tab"
                      innerRef={null}
                    >
                      <section
                        aria-labelledby="pf-tab-1-config-tab"
                        className="pf-c-tab-content"
                        data-ouia-component-type="PF4/TabContent"
                        data-ouia-safe={true}
                        hidden={true}
                        id="pf-tab-section-1-config-tab"
                        role="tabpanel"
                        tabIndex={0}
                      >
                        <DrawerContentBody
                          style={
                            Object {
                              "background": "var(--pf-c-page__main-section--BackgroundColor)",
                              "padding": "0px",
                            }
                          }
                        >
                          <div
                            className="pf-c-drawer__body"
                            style={
                              Object {
                                "background": "var(--pf-c-page__main-section--BackgroundColor)",
                                "padding": "0px",
                              }
                            }
                          />
                        </DrawerContentBody>
                      </section>
                    </TabContentBase>
                  </ForwardRef>
                </Tabs>
              </div>
              <DrawerPanelContent
                defaultSize="800px"
                isResizable={true}
                onResize={[Function]}
              >
                <div
                  className="pf-c-drawer__panel pf-m-resizable"
                  hidden={false}
                  onTransitionEnd={[Function]}
                  style={
                    Object {
                      "--pf-c-drawer__panel--md--FlexBasis": "800px",
                    }
                  }
                >
                  <div
                    aria-describedby="Press space to begin resizing, and use the arrow keys to grow or shrink the panel. Press enter or escape to finish resizing."
                    aria-label="Resize"
                    aria-orientation="vertical"
                    className="pf-c-drawer__splitter pf-m-vertical"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                    role="separator"
                    tabIndex={0}
                  >
                    <div
                      aria-hidden={true}
                      className="pf-c-drawer__splitter-handle"
                    />
                  </div>
                  <div
                    className="pf-c-drawer__panel-main"
                  >
                    <DrawerHead
                      style={
                        Object {
                          "height": "100%",
                        }
                      }
                    >
                      <DrawerPanelBody
                        hasNoPadding={false}
                      >
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-c-drawer__head"
                            style={
                              Object {
                                "height": "100%",
                              }
                            }
                          >
                            <span>
                              <MockedFormDisplayerContainer
                                formContent={
                                  Object {
                                    "configuration": Object {
                                      "resources": Object {
                                        "scripts": Object {},
                                        "styles": Object {},
                                      },
                                      "schema": "{\\"$schema\\":\\"http://json-schema.org/draft-07/schema#\\",\\"type\\":\\"object\\",\\"properties\\":{\\"approve\\":{\\"type\\":\\"boolean\\",\\"output\\":true},\\"candidate\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"email\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"},\\"salary\\":{\\"type\\":\\"integer\\"},\\"skills\\":{\\"type\\":\\"string\\"}},\\"input\\":true}}}",
                                    },
                                    "formInfo": Object {
                                      "lastModified": 2020-07-11T18:30:00.000Z,
                                      "name": "form1",
                                      "type": "HTML",
                                    },
                                    "source": "html source code",
                                  }
                                }
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerPanelBody>
                    </DrawerHead>
                  </div>
                </div>
              </DrawerPanelContent>
            </div>
          </DrawerMain>
        </DrawerContent>
      </div>
    </Drawer>
  </div>
</FormDetails>
`;
